# EnvTrace

./: LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
envtrace/: __init__.py  cli.py  pyproject.toml  reporting.py
envtrace/core/: __init__.py  alignment.py  comparators.py  evaluator.py  event.py  metrics.py  scoring.py
envtrace/examples/: simple_example.py  worked_example.py
envtrace/examples/notebooks/: EnvTrace_Quickstart.ipynb
envtrace/examples/reports/: cli_report.json
envtrace/examples/traces/: gt.json  pred.json
envtrace/io/: __init__.py  config_loader.py  json_io.py
envtrace/tests/: test_aggregator_evaluator.py  test_alignment.py  test_comparators.py  test_config_loader.py  test_continuous_structure.py  test_evaluator.py  test_event_io.py  test_metrics.py
